remove data from repo

--- a/main.ipynb
+++ b/main.ipynb
@@ -23,6 +23,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/feature_benchmark/feat_bench/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained model gpt2-small into HookedTransformer\n",
+      "Regular losses:\n",
+      "Hello, world! (4.5454): 8.2940 1.7945 7.1207 0.9723\n",
+      "What a wonderful day! I love it! (3.0407): 5.7028 4.5316 3.7924 2.4288 2.3876 1.8488 2.9413 2.3272 1.4055\n",
+      "SAE losses:\n",
+      "Hello, world! (4.8322): 8.3251 1.8809 7.7440 1.3789\n",
+      "What a wonderful day! I love it! (3.1330): 5.8770 4.4653 3.4355 3.0223 2.6157 1.8706 3.3329 2.2452 1.3325\n"
+     ]
+    }
+   ],
+   "source": [
+    "strings = [\"Hello, world!\", \"What a wonderful day! I love it!\"]\n",
+    "\n",
+    "sae, model = load_sae_and_model()\n",
+    "pre_acts, inner_acts, post_acts = get_sae_activations(model, sae, strings)\n",
+    "\n",
+    "regular_losses = get_vanilla_loss(model, sae, strings)\n",
+    "print(pretty_losses_fmt(\"Regular\", strings, regular_losses))\n",
+    "\n",
+    "sae_losses = get_vanilla_loss(model, sae, strings, with_sae_replacement=True)\n",
+    "print(pretty_losses_fmt(\"SAE\", strings, sae_losses))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAE from precomputed losses:\n",
+      "Hello, world! (4.8322): 8.3251 1.8809 7.7440 1.3789\n",
+      "What a wonderful day! I love it! (3.1330): 5.8770 4.4653 3.4355 3.0223 2.6157 1.8706 3.3329 2.2452 1.3325\n",
+      "Zeros losses:\n",
+      "Hello, world! (9.7050): 18.4170 2.3919 9.0383 8.9727\n",
+      "What a wonderful day! I love it! (8.9329): 14.1986 4.6239 11.2773 9.1869 8.9727 9.0896 8.4367 5.6377 8.9727\n",
+      "Shuffled losses:\n",
+      "Hello, world! (10.6601): 22.0878 3.0835 8.8917 8.5775\n",
+      "What a wonderful day! I love it! (9.9248): 22.7809 5.4265 13.3550 8.7819 8.3903 7.0072 8.4104 6.3069 8.8639\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sae predictions\n",
+    "sae_losses_from_precomputed = get_recons_loss_from_predicted_values(model, sae, strings, inner_acts)\n",
+    "print(pretty_losses_fmt(\"SAE from precomputed\", strings, sae_losses_from_precomputed))\n",
+    "\n",
+    "# check that sae_losses and sae_losses_from_precomputed are the same\n",
+    "for l1, l2 in zip(sae_losses, sae_losses_from_precomputed):\n",
+    "    for e1, e2 in zip(l1, l2):\n",
+    "        assert abs(e1 - e2) < 1e-5, f\"{e1} != {e2}\"\n",
+    "\n",
+    "# zero ablations\n",
+    "precomputed_zeros = [[[0.0] * len(l) for l in seq] for seq in inner_acts]\n",
+    "zeros_losses = get_recons_loss_from_predicted_values(model, sae, strings, precomputed_zeros)\n",
+    "print(pretty_losses_fmt(\"Zeros\", strings, zeros_losses))\n",
+    "\n",
+    "# shuffle ablations\n",
+    "def shuffle(l: list):\n",
+    "    l = l.copy()\n",
+    "    random.shuffle(l)\n",
+    "    return l\n",
+    "\n",
+    "shuffled_precomputed = [[shuffle(l) for l in seq] for seq in inner_acts]\n",
+    "shuffled_losses = get_recons_loss_from_predicted_values(model, sae, strings, shuffled_precomputed)\n",
+    "print(pretty_losses_fmt(\"Shuffled\", strings, shuffled_losses))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6269,7 +6356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
