more utils and jb feature subset

--- a/main.ipynb
+++ b/main.ipynb
@@ -185,6 +185,155 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2350, 23251, 11000, 13627, 21896,  6332,  2534, 11263,  8913,\n",
+       "        9532,  5128,  5157, 15162, 12092, 19697, 15570, 21983,  3230,\n",
+       "       20780, 10322,  7428, 10949, 11451, 16697,  6750, 19453, 23607,\n",
+       "        1346,  4730, 21772, 11817, 20963, 17386, 20351, 20820,  3096,\n",
+       "        4634,  2830, 11212, 16183, 10404,  8064, 14882,  6448, 14583,\n",
+       "        1103, 10075,  5625,  9760,  3594, 20189,  2004, 11264,  8685,\n",
+       "       16693,  7476, 16596, 11799, 13133,  9658,  1202, 12694, 14524,\n",
+       "        4036, 19899,  4679, 14073, 14372, 14610, 15500, 21032,   752,\n",
+       "       18083,  7739, 11606,  3197, 14169, 19484, 22719,  8728,  7104,\n",
+       "       14931, 22832,  2858,  9002,   536,  7585, 17533,   428, 19505,\n",
+       "        6769,  2726, 13410, 22202,  3509,  9579,   681, 22138, 21380,\n",
+       "       15824])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "indices = np.random.choice(24576, size=100, replace=False)\n",
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied 2350.json to 6-res-jb_subset_100\n",
+      "Copied 23251.json to 6-res-jb_subset_100\n",
+      "Copied 11000.json to 6-res-jb_subset_100\n",
+      "Copied 13627.json to 6-res-jb_subset_100\n",
+      "Copied 21896.json to 6-res-jb_subset_100\n",
+      "Copied 6332.json to 6-res-jb_subset_100\n",
+      "Copied 2534.json to 6-res-jb_subset_100\n",
+      "Copied 11263.json to 6-res-jb_subset_100\n",
+      "Copied 8913.json to 6-res-jb_subset_100\n",
+      "Copied 9532.json to 6-res-jb_subset_100\n",
+      "Copied 5128.json to 6-res-jb_subset_100\n",
+      "Copied 5157.json to 6-res-jb_subset_100\n",
+      "Copied 15162.json to 6-res-jb_subset_100\n",
+      "Copied 12092.json to 6-res-jb_subset_100\n",
+      "Copied 19697.json to 6-res-jb_subset_100\n",
+      "Copied 15570.json to 6-res-jb_subset_100\n",
+      "Copied 21983.json to 6-res-jb_subset_100\n",
+      "Copied 3230.json to 6-res-jb_subset_100\n",
+      "Copied 20780.json to 6-res-jb_subset_100\n",
+      "Copied 10322.json to 6-res-jb_subset_100\n",
+      "Copied 7428.json to 6-res-jb_subset_100\n",
+      "Copied 10949.json to 6-res-jb_subset_100\n",
+      "Copied 11451.json to 6-res-jb_subset_100\n",
+      "Copied 16697.json to 6-res-jb_subset_100\n",
+      "Copied 6750.json to 6-res-jb_subset_100\n",
+      "Copied 19453.json to 6-res-jb_subset_100\n",
+      "Copied 23607.json to 6-res-jb_subset_100\n",
+      "Copied 1346.json to 6-res-jb_subset_100\n",
+      "Copied 4730.json to 6-res-jb_subset_100\n",
+      "Copied 21772.json to 6-res-jb_subset_100\n",
+      "Copied 11817.json to 6-res-jb_subset_100\n",
+      "Copied 20963.json to 6-res-jb_subset_100\n",
+      "Copied 17386.json to 6-res-jb_subset_100\n",
+      "Copied 20351.json to 6-res-jb_subset_100\n",
+      "Copied 20820.json to 6-res-jb_subset_100\n",
+      "Copied 3096.json to 6-res-jb_subset_100\n",
+      "Copied 4634.json to 6-res-jb_subset_100\n",
+      "Copied 2830.json to 6-res-jb_subset_100\n",
+      "Copied 11212.json to 6-res-jb_subset_100\n",
+      "Copied 16183.json to 6-res-jb_subset_100\n",
+      "Copied 10404.json to 6-res-jb_subset_100\n",
+      "Copied 8064.json to 6-res-jb_subset_100\n",
+      "Copied 14882.json to 6-res-jb_subset_100\n",
+      "Copied 6448.json to 6-res-jb_subset_100\n",
+      "Copied 14583.json to 6-res-jb_subset_100\n",
+      "Copied 1103.json to 6-res-jb_subset_100\n",
+      "Copied 10075.json to 6-res-jb_subset_100\n",
+      "Copied 5625.json to 6-res-jb_subset_100\n",
+      "Copied 9760.json to 6-res-jb_subset_100\n",
+      "Copied 3594.json to 6-res-jb_subset_100\n",
+      "Copied 20189.json to 6-res-jb_subset_100\n",
+      "Copied 2004.json to 6-res-jb_subset_100\n",
+      "Copied 11264.json to 6-res-jb_subset_100\n",
+      "Copied 8685.json to 6-res-jb_subset_100\n",
+      "Copied 16693.json to 6-res-jb_subset_100\n",
+      "Copied 7476.json to 6-res-jb_subset_100\n",
+      "Copied 16596.json to 6-res-jb_subset_100\n",
+      "Copied 11799.json to 6-res-jb_subset_100\n",
+      "Copied 13133.json to 6-res-jb_subset_100\n",
+      "Copied 9658.json to 6-res-jb_subset_100\n",
+      "Copied 1202.json to 6-res-jb_subset_100\n",
+      "Copied 12694.json to 6-res-jb_subset_100\n",
+      "Copied 14524.json to 6-res-jb_subset_100\n",
+      "Copied 4036.json to 6-res-jb_subset_100\n",
+      "Copied 19899.json to 6-res-jb_subset_100\n",
+      "Copied 4679.json to 6-res-jb_subset_100\n",
+      "Copied 14073.json to 6-res-jb_subset_100\n",
+      "Copied 14372.json to 6-res-jb_subset_100\n",
+      "Copied 14610.json to 6-res-jb_subset_100\n",
+      "Copied 15500.json to 6-res-jb_subset_100\n",
+      "Copied 21032.json to 6-res-jb_subset_100\n",
+      "Copied 752.json to 6-res-jb_subset_100\n",
+      "Copied 18083.json to 6-res-jb_subset_100\n",
+      "Copied 7739.json to 6-res-jb_subset_100\n",
+      "Copied 11606.json to 6-res-jb_subset_100\n",
+      "Copied 3197.json to 6-res-jb_subset_100\n",
+      "Copied 14169.json to 6-res-jb_subset_100\n",
+      "Copied 19484.json to 6-res-jb_subset_100\n",
+      "Copied 22719.json to 6-res-jb_subset_100\n",
+      "Copied 8728.json to 6-res-jb_subset_100\n",
+      "Copied 7104.json to 6-res-jb_subset_100\n",
+      "Copied 14931.json to 6-res-jb_subset_100\n",
+      "Copied 22832.json to 6-res-jb_subset_100\n",
+      "Copied 2858.json to 6-res-jb_subset_100\n",
+      "Copied 9002.json to 6-res-jb_subset_100\n",
+      "Copied 536.json to 6-res-jb_subset_100\n",
+      "Copied 7585.json to 6-res-jb_subset_100\n",
+      "Copied 17533.json to 6-res-jb_subset_100\n",
+      "Copied 428.json to 6-res-jb_subset_100\n",
+      "Copied 19505.json to 6-res-jb_subset_100\n",
+      "Copied 6769.json to 6-res-jb_subset_100\n",
+      "Copied 2726.json to 6-res-jb_subset_100\n",
+      "Copied 13410.json to 6-res-jb_subset_100\n",
+      "Copied 22202.json to 6-res-jb_subset_100\n",
+      "Copied 3509.json to 6-res-jb_subset_100\n",
+      "Copied 9579.json to 6-res-jb_subset_100\n",
+      "Copied 681.json to 6-res-jb_subset_100\n",
+      "Copied 22138.json to 6-res-jb_subset_100\n",
+      "Copied 21380.json to 6-res-jb_subset_100\n",
+      "Copied 15824.json to 6-res-jb_subset_100\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy_files_by_list(indices, 'gpt2-small-organized/6-res-jb', '6-res-jb_subset_100')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
