--- a/main.ipynb
+++ b/main.ipynb
@@ -74,6 +74,9 @@
     "description, pos_examples, neg_examples, highest_activation = get_pos_neg_examples(feat_id, layer=6, basis='res-jb', num_pos=2, num_neg=2, neg_type='others', randomize_pos_examples=False)\n",
     "print(description)\n",
     "\n",
+    "max_indices = [pos_examples[i]['max_value_token_index'] + 1 for i in range(len(pos_examples))] + [9 for i in range(len(neg_examples))]\n",
+    "strings = [pos_examples[i]['sentence_string'] for i in range(len(pos_examples))] + [neg_examples[i]['sentence_string'] for i in range(len(neg_examples))]\n",
+    "\n",
     "for pos in pos_examples:\n",
     "    print(pos['sentence_string'])\n",
     "    print(pos['values'])\n",
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +107,6 @@
     }
    ],
    "source": [
-    "strings = [pos_examples[i]['sentence_string'] for i in range(len(pos_examples))] + [neg_examples[i]['sentence_string'] for i in range(len(neg_examples))]\n",
     "pre_acts, inner_acts, post_acts = get_sae_activations(model, sae, strings)\n",
     "\n",
     "for inner_act in inner_acts:\n",
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,11 +131,6 @@
       "SAE losses:\n",
       " published this spring, was funded through a grant from NHTSA and conducted through the (4.1995): 13.7159 5.8250 7.5830 1.0363 5.8370 7.0606 3.2471 1.2248 2.1267 0.3422 6.6113 4.4166 0.2100 2.4070 5.8228 2.7563 1.1680\n",
       "I. will receive a three-year grant from the Massachusetts Service Alliance that will place (4.7523): 4.0963 5.9176 10.0126 7.4673 1.9837 7.4549 0.4112 1.9489 5.1028 1.0288 0.6698 6.3484 9.1827 6.5538 4.3308 0.8622 7.4177\n",
-      "estlÃ© says it monitors environmental conditions around its source springs and that it adheres to (5.6963): 9.0402 8.5270 11.8070 3.8688 9.4960 3.0640 9.9601 6.6278 3.3729 3.0518 3.7505 7.8556 10.0650 1.9072 5.0132 1.5749 9.0704 0.1174 0.0602\n",
-      " Buteo sync framework, and many more.ĊĊThese technologies are brought to (6.3559): 10.1551 9.8049 5.1582 14.2513 9.2589 2.8932 4.2323 5.4076 3.2950 1.8616 13.6930 6.2208 3.9984 3.6078 11.5124 6.1163 1.3244 7.1624 0.8090\n",
-      "SAE feature 1 ablated losses:\n",
-      " published this spring, was funded through a grant from NHTSA and conducted through the (4.2350): 13.7159 5.8250 7.5830 1.0363 5.8370 7.0606 3.2471 1.2248 2.1267 0.7712 6.5450 4.4845 0.2092 2.4928 5.8825 2.7834 1.1706\n",
-      "I. will receive a three-year grant from the Massachusetts Service Alliance that will place (4.7978): 4.0963 5.9176 10.0126 7.4673 1.9837 7.4549 0.4112 1.9489 5.1028 1.6349 0.8448 6.5888 9.1750 6.6881 4.3267 0.9515 6.9573\n",
       "estlÃ© says it monitors environmental conditions around its source springs and that it adheres to (5.6963): 9.0402 8.5270 11.8070 3.8688 9.4960 3.0640 9.9601 6.6278 3.3729 3.0518 3.7505 7.8556 10.0650 1.9072 5.0132 1.5749 9.0704 0.1174 0.0602\n",
       " Buteo sync framework, and many more.ĊĊThese technologies are brought to (6.3559): 10.1551 9.8049 5.1582 14.2513 9.2589 2.8932 4.2323 5.4076 3.2950 1.8616 13.6930 6.2208 3.9984 3.6078 11.5124 6.1163 1.3244 7.1624 0.8090\n",
       "Zeros losses:\n",
@@ -153,11 +150,6 @@
     "sae_losses = get_vanilla_loss(model, sae, strings, with_sae_replacement=True)\n",
     "print(pretty_losses_fmt(\"SAE\", strings, sae_losses))\n",
     "\n",
-    "# Get model's loss on strings using SAE with selected feature ablated\n",
-    "ablated_inner_acts = replace_feature_activation(inner_acts, feat_id, 0)\n",
-    "ablated_sae_losses = get_recons_loss_from_predicted_values(model, sae, strings, ablated_inner_acts)\n",
-    "print(pretty_losses_fmt(f\"SAE feature {feat_id} ablated\", strings, ablated_sae_losses))\n",
-    "\n",
     "# Loss with all features ablated\n",
     "precomputed_zeros = [[[0.0] * len(l) for l in seq] for seq in inner_acts]\n",
     "zeros_losses = get_recons_loss_from_predicted_values(model, sae, strings, precomputed_zeros)\n",
@@ -166,18 +158,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.43, -0.07, 0.07, -0.0, 0.09, 0.06, 0.03, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.61, 0.17, 0.24, -0.01, 0.13, -0.0, 0.09, -0.46], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]\n"
+      "SAE feature 1 ablated losses:\n",
+      " published this spring, was funded through a grant from NHTSA and conducted through the (4.2348): 13.7159 5.8250 7.5830 1.0363 5.8370 7.0606 3.2471 1.2248 2.1267 0.7712 6.5461 4.4802 0.2106 2.4924 5.8819 2.7817 1.1709\n",
+      "I. will receive a three-year grant from the Massachusetts Service Alliance that will place (4.7978): 4.0963 5.9176 10.0126 7.4673 1.9837 7.4549 0.4112 1.9489 5.1028 1.6349 0.8448 6.5888 9.1750 6.6881 4.3267 0.9515 6.9573\n",
+      "estlÃ© says it monitors environmental conditions around its source springs and that it adheres to (5.6963): 9.0402 8.5270 11.8070 3.8688 9.4960 3.0640 9.9601 6.6278 3.3729 3.0518 3.7505 7.8556 10.0650 1.9072 5.0132 1.5749 9.0704 0.1174 0.0602\n",
+      " Buteo sync framework, and many more.ĊĊThese technologies are brought to (6.3559): 10.1551 9.8049 5.1582 14.2513 9.2589 2.8932 4.2323 5.4076 3.2950 1.8616 13.6930 6.2208 3.9984 3.6078 11.5124 6.1163 1.3244 7.1624 0.8090\n",
+      "[0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         1.33336258 0.\n",
+      " 0.         0.         0.         0.         0.         0.        ]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.43, -0.07, 0.06, 0.0, 0.09, 0.06, 0.03, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.61, 0.17, 0.24, -0.01, 0.13, -0.0, 0.09, -0.46], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]\n"
      ]
     }
    ],
    "source": [
+    "# Get model's loss on strings using SAE with selected feature ablated\n",
+    "replacements = [0 for string in strings]\n",
+    "ablated_inner_acts = replace_max_feature_activation(inner_acts, feat_id, max_indices, replacements)\n",
+    "ablated_sae_losses = get_recons_loss_from_predicted_values(model, sae, strings, ablated_inner_acts)\n",
+    "print(pretty_losses_fmt(f\"SAE feature {feat_id} ablated\", strings, ablated_sae_losses))\n",
+    "\n",
+    "for inner_act in ablated_inner_acts:\n",
+    "    x = np.array(inner_act)\n",
+    "    print(x[:,feat_id])\n",
+    "\n",
     "# Print how much loss changes after ablating selected feature\n",
     "difference = elementwise_difference(sae_losses, ablated_sae_losses)\n",
     "rounded_difference = [[round(elem, 2) for elem in sublist] for sublist in difference]\n",
@@ -214,122 +227,7 @@
    "source": [
     "np.random.seed(42)\n",
     "indices = np.random.choice(24576, size=100, replace=False)\n",
-    "indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copied 2350.json to 6-res-jb_subset_100\n",
-      "Copied 23251.json to 6-res-jb_subset_100\n",
-      "Copied 11000.json to 6-res-jb_subset_100\n",
-      "Copied 13627.json to 6-res-jb_subset_100\n",
-      "Copied 21896.json to 6-res-jb_subset_100\n",
-      "Copied 6332.json to 6-res-jb_subset_100\n",
-      "Copied 2534.json to 6-res-jb_subset_100\n",
-      "Copied 11263.json to 6-res-jb_subset_100\n",
-      "Copied 8913.json to 6-res-jb_subset_100\n",
-      "Copied 9532.json to 6-res-jb_subset_100\n",
-      "Copied 5128.json to 6-res-jb_subset_100\n",
-      "Copied 5157.json to 6-res-jb_subset_100\n",
-      "Copied 15162.json to 6-res-jb_subset_100\n",
-      "Copied 12092.json to 6-res-jb_subset_100\n",
-      "Copied 19697.json to 6-res-jb_subset_100\n",
-      "Copied 15570.json to 6-res-jb_subset_100\n",
-      "Copied 21983.json to 6-res-jb_subset_100\n",
-      "Copied 3230.json to 6-res-jb_subset_100\n",
-      "Copied 20780.json to 6-res-jb_subset_100\n",
-      "Copied 10322.json to 6-res-jb_subset_100\n",
-      "Copied 7428.json to 6-res-jb_subset_100\n",
-      "Copied 10949.json to 6-res-jb_subset_100\n",
-      "Copied 11451.json to 6-res-jb_subset_100\n",
-      "Copied 16697.json to 6-res-jb_subset_100\n",
-      "Copied 6750.json to 6-res-jb_subset_100\n",
-      "Copied 19453.json to 6-res-jb_subset_100\n",
-      "Copied 23607.json to 6-res-jb_subset_100\n",
-      "Copied 1346.json to 6-res-jb_subset_100\n",
-      "Copied 4730.json to 6-res-jb_subset_100\n",
-      "Copied 21772.json to 6-res-jb_subset_100\n",
-      "Copied 11817.json to 6-res-jb_subset_100\n",
-      "Copied 20963.json to 6-res-jb_subset_100\n",
-      "Copied 17386.json to 6-res-jb_subset_100\n",
-      "Copied 20351.json to 6-res-jb_subset_100\n",
-      "Copied 20820.json to 6-res-jb_subset_100\n",
-      "Copied 3096.json to 6-res-jb_subset_100\n",
-      "Copied 4634.json to 6-res-jb_subset_100\n",
-      "Copied 2830.json to 6-res-jb_subset_100\n",
-      "Copied 11212.json to 6-res-jb_subset_100\n",
-      "Copied 16183.json to 6-res-jb_subset_100\n",
-      "Copied 10404.json to 6-res-jb_subset_100\n",
-      "Copied 8064.json to 6-res-jb_subset_100\n",
-      "Copied 14882.json to 6-res-jb_subset_100\n",
-      "Copied 6448.json to 6-res-jb_subset_100\n",
-      "Copied 14583.json to 6-res-jb_subset_100\n",
-      "Copied 1103.json to 6-res-jb_subset_100\n",
-      "Copied 10075.json to 6-res-jb_subset_100\n",
-      "Copied 5625.json to 6-res-jb_subset_100\n",
-      "Copied 9760.json to 6-res-jb_subset_100\n",
-      "Copied 3594.json to 6-res-jb_subset_100\n",
-      "Copied 20189.json to 6-res-jb_subset_100\n",
-      "Copied 2004.json to 6-res-jb_subset_100\n",
-      "Copied 11264.json to 6-res-jb_subset_100\n",
-      "Copied 8685.json to 6-res-jb_subset_100\n",
-      "Copied 16693.json to 6-res-jb_subset_100\n",
-      "Copied 7476.json to 6-res-jb_subset_100\n",
-      "Copied 16596.json to 6-res-jb_subset_100\n",
-      "Copied 11799.json to 6-res-jb_subset_100\n",
-      "Copied 13133.json to 6-res-jb_subset_100\n",
-      "Copied 9658.json to 6-res-jb_subset_100\n",
-      "Copied 1202.json to 6-res-jb_subset_100\n",
-      "Copied 12694.json to 6-res-jb_subset_100\n",
-      "Copied 14524.json to 6-res-jb_subset_100\n",
-      "Copied 4036.json to 6-res-jb_subset_100\n",
-      "Copied 19899.json to 6-res-jb_subset_100\n",
-      "Copied 4679.json to 6-res-jb_subset_100\n",
-      "Copied 14073.json to 6-res-jb_subset_100\n",
-      "Copied 14372.json to 6-res-jb_subset_100\n",
-      "Copied 14610.json to 6-res-jb_subset_100\n",
-      "Copied 15500.json to 6-res-jb_subset_100\n",
-      "Copied 21032.json to 6-res-jb_subset_100\n",
-      "Copied 752.json to 6-res-jb_subset_100\n",
-      "Copied 18083.json to 6-res-jb_subset_100\n",
-      "Copied 7739.json to 6-res-jb_subset_100\n",
-      "Copied 11606.json to 6-res-jb_subset_100\n",
-      "Copied 3197.json to 6-res-jb_subset_100\n",
-      "Copied 14169.json to 6-res-jb_subset_100\n",
-      "Copied 19484.json to 6-res-jb_subset_100\n",
-      "Copied 22719.json to 6-res-jb_subset_100\n",
-      "Copied 8728.json to 6-res-jb_subset_100\n",
-      "Copied 7104.json to 6-res-jb_subset_100\n",
-      "Copied 14931.json to 6-res-jb_subset_100\n",
-      "Copied 22832.json to 6-res-jb_subset_100\n",
-      "Copied 2858.json to 6-res-jb_subset_100\n",
-      "Copied 9002.json to 6-res-jb_subset_100\n",
-      "Copied 536.json to 6-res-jb_subset_100\n",
-      "Copied 7585.json to 6-res-jb_subset_100\n",
-      "Copied 17533.json to 6-res-jb_subset_100\n",
-      "Copied 428.json to 6-res-jb_subset_100\n",
-      "Copied 19505.json to 6-res-jb_subset_100\n",
-      "Copied 6769.json to 6-res-jb_subset_100\n",
-      "Copied 2726.json to 6-res-jb_subset_100\n",
-      "Copied 13410.json to 6-res-jb_subset_100\n",
-      "Copied 22202.json to 6-res-jb_subset_100\n",
-      "Copied 3509.json to 6-res-jb_subset_100\n",
-      "Copied 9579.json to 6-res-jb_subset_100\n",
-      "Copied 681.json to 6-res-jb_subset_100\n",
-      "Copied 22138.json to 6-res-jb_subset_100\n",
-      "Copied 21380.json to 6-res-jb_subset_100\n",
-      "Copied 15824.json to 6-res-jb_subset_100\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(indices)\n",
     "copy_files_by_list(indices, 'gpt2-small-organized/6-res-jb', '6-res-jb_subset_100')"
    ]
   },
