analyzing recomputed values

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,6 +18,7 @@
     "from predict_activations import *\n",
     "from model_utils import *\n",
     "from utils import *\n",
+    "from reVals_vs_val import *\n",
     "import json\n",
     "import pprint"
    ]
@@ -182,6 +183,49 @@
    ],
    "source": [
     "recompute_directory_activations('6-res-jb_subset_100', 'gpt2-small-organized/6-res-jb', model, sae, recompute=False, re_sort=False, num_neg_others=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_names, mean_pos_ratio, mean_neg_ratio = compare_recomputed_group('6-res-jb_subset_100')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2534.json pos 0.5422101798848261\n",
+      "9532.json pos 0.6332970320399793\n",
+      "15570.json pos 0.4724053762692831\n",
+      "20780.json pos 0.342133800284376\n",
+      "2830.json pos 0.22913556500864662\n",
+      "10404.json pos 0\n",
+      "8064.json pos 0.3940560582069721\n",
+      "4036.json neg 0.2727272727272727\n",
+      "19899.json pos 0\n",
+      "7739.json neg 0.16\n",
+      "19484.json pos 0.5232896412076664\n",
+      "14931.json pos 0.050575466759776914\n",
+      "22832.json pos 0.5843800777466767\n",
+      "9579.json pos 0.14695032468931066\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file, pos, neg in zip(file_names, mean_pos_ratio, mean_neg_ratio):\n",
+    "    if pos < 0.7:\n",
+    "        print(file, 'pos', pos)\n",
+    "    if neg > 0.05:\n",
+    "        print(file, 'neg', neg)"
    ]
   },
   {
